reload create done

--- a/corona-free-dark-bootstrap-admin-template-1.0.0/template/index.html
+++ b/corona-free-dark-bootstrap-admin-template-1.0.0/template/index.html
@@ -170,7 +170,8 @@
               <ul class="nav flex-column sub-menu">
 <!--                <li class="nav-item"> <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a></li>-->
                 <li class="nav-item"> <a class="nav-link" href="../template/pages/packages/offers.html"> Offer Page </a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
+<!--                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>-->
+                <li class="nav-item"> <a class="nav-link" href="../template/pages/packages/reload.html"> reload </a></li>
                 <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
                 <li class="nav-item"> <a class="nav-link" href="../template/pages/samples/login.html"> Login </a></li>
                 <li class="nav-item"> <a class="nav-link" href="../template/pages/samples/register_admin.html"> Register </a></li>
