--- a/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/ui-features/typography.html
+++ b/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/ui-features/typography.html
@@ -149,7 +149,7 @@
                 <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-404.html"> 404 </a></li>
                 <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-500.html"> 500 </a></li>
                 <li class="nav-item"> <a class="nav-link" href="../samples/login.html"> Login </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../samples/register_user.html"> Register </a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../../../register_user.html"> Register </a></li>
               </ul>
             </div>
           </li>
